--- a/aulasCSS/style.css
+++ b/aulasCSS/style.css
@@ -1,3 +1,47 @@
+/* tudo */
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* parágrafo */
 p {
     color: red;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* todas as divs */
+div {
+    height: 200px;
+    color: black;
+}
+
+/* todos os links */
+a {
+    color: blue;
+}
+
+/* # serve para id e . para classe */
+.negrito {
+    font-weight: bold;
+}
+
+/* aplicar para o primeiro item do segundo elemento vindo após o primeiro */
+p + a { 
+    font-weight: bold;
+    color: blue
+}
+
+/* aplicar para todos os itens do segundo elemento vindos após o primeiro */
+p ~ a { 
+    font-weight: bolder;
+    color: yellowgreen
+}
+/* seletor de filho*/
+p > a { 
+    font-weight: bold;
+    color: blueviolet
+}
+/* seletor descendente (todos os filhos dos filhos...) */
+div a {
+    color: pink;
 }
